# NavPac-Trainer

./: .gitignore  AGENTS.md  PLAN.md  README.md  angulos.py  app.py  lop.py  navigation.py  pyproject.toml  requirements.txt  tipos.py
src/navpac/: angulos.py  launcher.py  lop.py  navigation.py  tipos.py
src/navpac/webapp/: app.py  fix_chart.py
tests/: conftest.py  test_fix_chart.py  test_navigation.py
