[project]
name = "navpac-trainer"
version = "0.1.0"
description = "Multi-Route Celestial Navigation Trainer built with Streamlit"
requires-python = ">=3.11"
license = { text = "GPL-3.0" }
readme = "README.md"
authors = [{ name = "Polaris0" }]
dependencies = [
    "streamlit",
    "streamlit-folium",
    "pandas",
    "skyfield",
    "geographiclib",
    "folium",
    "reportlab",
]

[dependency-groups]
dev = [
    "pytest",
    "pytest-cov",
    "pytest-mock",
    "ruff",
]

[tool.ruff]
target-version = "py311"
